--- a/.eslintrc
+++ b/.eslintrc
@@ -3,23 +3,28 @@
   "settings": {
     "import/resolver": {
       "node": {
-        "extensions": [".js",".jsx",".ts",".tsx"]
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
       }
     }
   },
   "rules": {
     "import/extensions": [
-       "error",
-       "ignorePackages",
-       {
-         "js": "never",
-         "jsx": "never",
-         "ts": "never",
-         "tsx": "never"
-       }
+      "error",
+      "ignorePackages",
+      {
+        "js": "never",
+        "jsx": "never",
+        "ts": "never",
+        "tsx": "never"
+      }
     ],
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }],
     "no-use-before-define": "off",
-    "jsdoc/require-returns": "off" 
- }
+    "jsdoc/require-returns": "off",
+    "no-param-reassign": "off",
+    "max-classes-per-file": "off",
+    "max-len": ["error", { "code": 120 }],
+    "no-extra-semi": "off",
+    "@typescript-eslint/no-extra-semi": ["error"]
+  }
 }
